# EasyCLIProxyAPI

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  README_CN.md  build.ps1  build.sh  clean.ps1  clean.sh  core-version.txt  diy.yaml  index.html  package.json  run.ps1  run.sh  vite.config.js
.github/workflows/: release.yml  sync-upstream.yml
agent_docs/: Instructions for running CLIProxyAPI.md
scripts/: generate-portable-update-manifest.d.mts  generate-portable-update-manifest.mjs  prepare-portable.mjs  runtimeText.test.ts
src/: App.tsx  AppErrorBoundary.tsx  appUpdate.tsx  appUpdateModel.ts  coreRuntime.tsx  main.tsx  navigation.ts  styles.css  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dmg.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  usage.rs
src/i18n/: index.tsx  ja.ts  resources.ts  runtimeText.ts  traditional.ts
src/pages/: AgentsPage.tsx  ApiAccessPage.tsx  AuthFileManagementPage.tsx  ConfigPanel.tsx  Kernel.tsx  ManagementPages.tsx  QuotaPage.tsx  ThinkingAliasesPage.tsx  UsageRecordsPage.tsx
src/services/: agentModelPicker.ts  authFiles.ts  clientAccess.ts  managementApi.ts  modelService.ts  quotaService.ts
tests/: agentModelPicker.test.ts  i18n.test.ts  navigationAndUpdate.test.ts  portableUpdateManifest.test.ts  providerConfig.test.ts  thinkingAliases.test.ts
