[package]
name = "cpa-gui"
version = "0.1.0"
description = "CPA desktop management shell"
authors = ["lzt404"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-util = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
