[package]
name = "cpa-gui"
version = "0.1.9"
description = "CPA desktop management shell"
authors = ["lzt404"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
futures-util = "0.3"
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
toml_edit = "0.20"
yaml-serde-edit = { version = "0.1", default-features = false }
yaml-edit = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
